--- a/staged_dependencies.yaml
+++ b/staged_dependencies.yaml
@@ -2,7 +2,7 @@ current_repo:
   repo: insightsengineering/formatable
   host: https://github.com
 upstream_repos: {}
-downstream_repos: {}
+downstream_repos:
   insightsengineering/rlistings:
     repo: insightsengineering/rlistings
     host: https://github.com
