--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -33,3 +33,6 @@ jobs:
     uses: insightsengineering/r.pkg.template/.github/workflows/pkgdown.yaml@main
     secrets:
       REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
+    with:
+      enable-staged-dependencies-check: false
+
