Fix title/footer regression. Include concept of page titles. dev vbump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export("main_title<-")
 export("obj_format<-")
 export("obj_label<-")
 export("obj_name<-")
+export("page_titles<-")
 export("prov_footer<-")
 export("subtitles<-")
 export("var_labels<-")
@@ -29,6 +30,7 @@ export(obj_name)
 export(padstr)
 export(pag_indices_inner)
 export(pagdfrow)
+export(page_titles)
 export(propose_column_widths)
 export(prov_footer)
 export(round_fmt)
@@ -43,8 +45,11 @@ export(var_relabel)
 export(vert_pag_indices)
 export(with_label)
 exportClasses(MatrixPrintForm)
+exportMethods("main_footer<-")
 exportMethods("obj_format<-")
 exportMethods("obj_label<-")
+exportMethods("page_titles<-")
+exportMethods("prov_footer<-")
 exportMethods(divider_height)
 exportMethods(main_footer)
 exportMethods(main_title)
@@ -52,6 +57,7 @@ exportMethods(matrix_form)
 exportMethods(nlines)
 exportMethods(obj_format)
 exportMethods(obj_label)
+exportMethods(page_titles)
 exportMethods(prov_footer)
 exportMethods(subtitles)
 exportMethods(toString)
