--- a/staged_dependencies.yaml
+++ b/staged_dependencies.yaml
@@ -3,8 +3,8 @@ current_repo:
   host: https://github.com
 upstream_repos: {}
 downstream_repos:
-  insightsengineering/rlistings:
-    repo: insightsengineering/rlistings
+  shajoezhu/rlistings:
+    repo: shajoezhu/rlistings
     host: https://github.com
   Roche/rtables:
     repo: Roche/rtables
