--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -11,4 +11,4 @@ jobs:
     name: R Package Validation report 📃
     uses: insightsengineering/r.pkg.template/.github/workflows/validation.yaml@main
     secrets:
-      REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
+      REPO_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
