Allow generic token to write to PR

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -3,7 +3,6 @@ name: Check 🛠
 
 on:
   pull_request:
-  pull_request_target:
   push:
     branches:
       - main
@@ -21,6 +20,8 @@ jobs:
     with:
       enable-staged-dependencies-check: false
   coverage:
+    permissions:
+      pull-requests: write
     if: github.event_name == 'pull_request'
     name: Coverage 📔 
     uses: insightsengineering/r.pkg.template/.github/workflows/test-coverage.yaml@main
