teal.osprey to downstream

--- a/staged_dependencies.yaml
+++ b/staged_dependencies.yaml
@@ -12,3 +12,6 @@ downstream_repos:
   insightsengineering/tern:
     repo: insightsengineering/tern
     host: https://github.com
+  insightsengineering/teal.osprey:
+    repo: insightsengineering/teal.osprey
+    host: https://github.com
