--- a/staged_dependencies.yaml
+++ b/staged_dependencies.yaml
@@ -14,6 +14,7 @@ downstream_repos:
     host: https://github.com
   insightsengineering/teal.slice:
     repo: insightsengineering/teal.slice
+    host: https://github.com
   insightsengineering/teal.transform:
     repo: insightsengineering/teal.transform
     host: https://github.com
