--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export("var_labels<-")
 export(MatrixPrintForm)
 export(all_footers)
 export(all_titles)
+export(basic_matrix_form)
+export(basic_pagdf)
 export(divider_height)
 export(format_value)
 export(is.wholenumber)
