--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: formatters
-Title: Formatters and ASCII Rendering for Tables
+Title: ASCII Formatting for Values and Tables
 Date: 2022-03-24
 Version: 0.1.0.0004
 Authors@R: c(
