--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: formatters
 Title: ASCII Formatting for Values and Tables
 Date: 2022-03-24
-Version: 0.1.0.0007
+Version: 0.2.0
 Authors@R: c(
   person("Gabriel", "Becker", email = "gabembecker@gmail.com", role = c("aut", "cre")),
   person("Adrian", "Waddell", email = "adrian.waddell@roche.com", role = "aut"),
@@ -12,6 +12,7 @@ Depends: methods, R (>= 2.10)
 Imports: htmltools
 Suggests:
   dplyr,
+  tinytest,
   knitr,
   rmarkdown
 Encoding: UTF-8
