update staged deps, [skip audit] [skip gitleaks] [skip spelling] [skip licenses] [skip linter] [skip style] [skip docs] [skip validation] [skip release] [skip coverage] [skip version]

--- a/staged_dependencies.yaml
+++ b/staged_dependencies.yaml
@@ -15,6 +15,9 @@ downstream_repos:
   insightsengineering/tern.mmrm:
     repo: insightsengineering/tern.mmrm
     host: https://github.com
+  insightsengineering/tern.rbmi:
+    repo: insightsengineering/tern.rbmi
+    host: https://github.com
   insightsengineering/teal.osprey:
     repo: insightsengineering/teal.osprey
     host: https://github.com
