--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(all_footers)
 export(all_titles)
 export(basic_matrix_form)
 export(basic_pagdf)
+export(default_hsep)
 export(divider_height)
 export(format_value)
 export(is.wholenumber)
@@ -68,4 +69,5 @@ importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(stats,na.omit)
 importFrom(utils,head)
+importFrom(utils,localeToCharset)
 importFrom(utils,tail)
