--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,16 @@
 export("%||%")
 export("main_footer<-")
 export("main_title<-")
+export("mf_aligns<-")
+export("mf_display<-")
+export("mf_formats<-")
+export("mf_lgrouping<-")
+export("mf_nlheader<-")
+export("mf_nrheader<-")
+export("mf_rfnotes<-")
+export("mf_rinfo<-")
+export("mf_spans<-")
+export("mf_strings<-")
 export("obj_format<-")
 export("obj_label<-")
 export("obj_name<-")
@@ -17,6 +27,7 @@ export(basic_matrix_form)
 export(basic_pagdf)
 export(default_hsep)
 export(divider_height)
+export(font_lcpi)
 export(format_value)
 export(is.wholenumber)
 export(is_valid_format)
@@ -26,6 +37,16 @@ export(main_title)
 export(make_row_df)
 export(matrix_form)
 export(matrix_print_form)
+export(mf_aligns)
+export(mf_display)
+export(mf_formats)
+export(mf_lgrouping)
+export(mf_nlheader)
+export(mf_nrheader)
+export(mf_rfnotes)
+export(mf_rinfo)
+export(mf_spans)
+export(mf_strings)
 export(nlines)
 export(obj_format)
 export(obj_label)
@@ -33,7 +54,9 @@ export(obj_name)
 export(padstr)
 export(pag_indices_inner)
 export(pagdfrow)
+export(page_lcpp)
 export(page_titles)
+export(page_types)
 export(propose_column_widths)
 export(prov_footer)
 export(round_fmt)
@@ -64,6 +87,8 @@ exportMethods(page_titles)
 exportMethods(prov_footer)
 exportMethods(subtitles)
 exportMethods(toString)
+import(grDevices)
+import(grid)
 import(methods)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
