Add `table_inset` support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export("obj_name<-")
 export("page_titles<-")
 export("prov_footer<-")
 export("subtitles<-")
+export("table_inset<-")
 export("var_labels<-")
 export(MatrixPrintForm)
 export(all_footers)
@@ -64,6 +65,7 @@ export(spans_to_viscell)
 export(spread_integer)
 export(sprintf_format)
 export(subtitles)
+export(table_inset)
 export(toString)
 export(var_labels)
 export(var_labels_remove)
@@ -76,6 +78,7 @@ exportMethods("obj_format<-")
 exportMethods("obj_label<-")
 exportMethods("page_titles<-")
 exportMethods("prov_footer<-")
+exportMethods("table_inset<-")
 exportMethods(divider_height)
 exportMethods(main_footer)
 exportMethods(main_title)
@@ -86,6 +89,7 @@ exportMethods(obj_label)
 exportMethods(page_titles)
 exportMethods(prov_footer)
 exportMethods(subtitles)
+exportMethods(table_inset)
 exportMethods(toString)
 import(grDevices)
 import(grid)
