Refactor wrapping of large words. tf_wrap now works with insets. vbump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,10 +74,12 @@ export(vert_pag_indices)
 export(with_label)
 exportClasses(MatrixPrintForm)
 exportMethods("main_footer<-")
+exportMethods("main_title<-")
 exportMethods("obj_format<-")
 exportMethods("obj_label<-")
 exportMethods("page_titles<-")
 exportMethods("prov_footer<-")
+exportMethods("subtitles<-")
 exportMethods("table_inset<-")
 exportMethods(divider_height)
 exportMethods(main_footer)
