--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: formatters
 Title: ASCII Formatting for Values and Tables
 Date: 2022-08-16
-Version: 0.3.3.5
+Version: 0.3.3.7
 Authors@R: c(
   person("Gabriel", "Becker", email = "gabembecker@gmail.com", role = c("aut", "cre")),
   person("Adrian", "Waddell", email = "adrian.waddell@roche.com", role = "aut"),
@@ -9,14 +9,16 @@ Authors@R: c(
 Description: We provide a framework for rendering complex tables to ASCII, and a set of formatters for transforming values or sets of values into ASCII-ready display strings.
 License: Apache License 2.0
 Depends: methods, R (>= 2.10)
-Imports: htmltools, grid
+Imports: 
+  grid,
+  htmltools
 Suggests:
   dplyr,
-  testthat,
+  gt (>= 0.7.0),
+  huxtable,
   knitr,
   rmarkdown,
-  huxtable,
-  gt (>= 0.7.0)
+  testthat
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/insightsengineering/formatters
