Export `page_dim` for use in exporters until they are moved here. vbump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(obj_name)
 export(padstr)
 export(pag_indices_inner)
 export(pagdfrow)
+export(page_dim)
 export(page_lcpp)
 export(page_titles)
 export(page_types)
