--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,8 @@ export(var_labels_remove)
 export(var_relabel)
 export(vert_pag_indices)
 export(with_label)
+export(wrap_string)
+export(wrap_txt)
 exportClasses(MatrixPrintForm)
 exportMethods("main_footer<-")
 exportMethods("main_title<-")
