--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(mf_rfnotes)
 export(mf_rinfo)
 export(mf_spans)
 export(mf_strings)
+export(mpf_to_rtf)
 export(nlines)
 export(obj_format)
 export(obj_label)
