[skip actions] PR approval only for Gabe
Signed-off-by: Dinakar <26552821+cicdguy@users.noreply.github.com>

--- a/.github/workflows/auto-approve.yaml
+++ b/.github/workflows/auto-approve.yaml
@@ -12,6 +12,7 @@ jobs:
     name: Approve ✅
     steps:
       - name: Auto Approve PR
+        if: ${{ github.actor == 'gmbecker' }}
         uses: hmarr/auto-approve-action@v3
         with:
           review-message: "LGTM 🤖"
