Precommit ready and tested locally

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,18 +1,19 @@
+(^|/)[#][^/]*#$
+(^|/)\.[#][^/]*$
 ^.*\.Rproj$
-^\.Rproj\.user$
-^docs$
-^_pkgdown\.yml$
-^\.github$
-^README\.Rmd$
+^.lintr$
 ^README-.*\.png$
+^README\.Rmd$
+^[^/]*.R$
+^[^/]*html$
+^\..*$
+^\.Rproj\.user$
+^\.github$
+^\.pre-commit-config\.yaml$
+^_pkgdown\.yml$
+^docs$
 ^logs$
 ^man-roxygen$
 ^staged_dependencies\.yaml$
-^\..*$
 ^temp$
-^[^/]*.R$
-^[^/]*html$
-^.lintr$
-(^|/)\.[#][^/]*$
-(^|/)[#][^/]*#$
 ~$
