Cell value wordwrapping machinery.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(matrix_print_form)
 export(mf_aligns)
 export(mf_display)
 export(mf_formats)
+export(mf_has_topleft)
 export(mf_lgrouping)
 export(mf_nlheader)
 export(mf_nrheader)
