--- a/staged_dependencies.yaml
+++ b/staged_dependencies.yaml
@@ -39,3 +39,6 @@ downstream_repos:
   insightsengineering/chevron:
     repo: insightsengineering/chevron
     host: https://github.com
+  insightsengineering/citril:
+    repo: insightsengineering/citril
+    host: https://github.com
