reintroduce obj_na_str after regression. vbump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export("mf_spans<-")
 export("mf_strings<-")
 export("obj_format<-")
 export("obj_label<-")
+export("obj_na_str<-")
 export("obj_name<-")
 export("page_titles<-")
 export("prov_footer<-")
@@ -53,6 +54,7 @@ export(mpf_to_rtf)
 export(nlines)
 export(obj_format)
 export(obj_label)
+export(obj_na_str)
 export(obj_name)
 export(padstr)
 export(pag_indices_inner)
@@ -82,6 +84,7 @@ exportMethods("main_footer<-")
 exportMethods("main_title<-")
 exportMethods("obj_format<-")
 exportMethods("obj_label<-")
+exportMethods("obj_na_str<-")
 exportMethods("page_titles<-")
 exportMethods("prov_footer<-")
 exportMethods("subtitles<-")
@@ -93,6 +96,7 @@ exportMethods(matrix_form)
 exportMethods(nlines)
 exportMethods(obj_format)
 exportMethods(obj_label)
+exportMethods(obj_na_str)
 exportMethods(page_titles)
 exportMethods(prov_footer)
 exportMethods(subtitles)
