Add option to skip error generation on warnings
Signed-off-by: Dinakar <26552821+cicdguy@users.noreply.github.com>

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -33,6 +33,8 @@ jobs:
     if: github.event_name != 'push'
     name: SuperLinter 🦸‍♀️
     uses: insightsengineering/r.pkg.template/.github/workflows/linter.yaml@main
+    with:
+      lintr_error_on_lint: false
   roxygen:
     name: Roxygen 🅾
     uses: insightsengineering/r.pkg.template/.github/workflows/roxygen.yaml@main
