Add exporter functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,10 @@ export(basic_matrix_form)
 export(basic_pagdf)
 export(default_hsep)
 export(divider_height)
+export(export_as_flextable)
+export(export_as_pdf)
+export(export_as_rtf)
+export(export_as_txt)
 export(font_lcpi)
 export(format_value)
 export(is.wholenumber)
@@ -105,9 +109,24 @@ exportMethods(toString)
 import(grDevices)
 import(grid)
 import(methods)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(grid,convertHeight)
+importFrom(grid,convertWidth)
+importFrom(grid,get.gpar)
+importFrom(grid,gpar)
+importFrom(grid,grid.draw)
+importFrom(grid,grid.newpage)
+importFrom(grid,grobHeight)
+importFrom(grid,grobWidth)
+importFrom(grid,plotViewport)
+importFrom(grid,pushViewport)
+importFrom(grid,textGrob)
+importFrom(grid,unit)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(stats,na.omit)
+importFrom(tools,file_ext)
 importFrom(utils,head)
 importFrom(utils,localeToCharset)
 importFrom(utils,tail)
