Update NEWS, fix errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ importFrom(grid,unit)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(stats,na.omit)
+importFrom(stats,setNames)
 importFrom(tools,file_ext)
 importFrom(utils,head)
 importFrom(utils,localeToCharset)
