--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ exportMethods(prov_footer)
 exportMethods(subtitles)
 exportMethods(table_inset)
 exportMethods(toString)
+import(checkmate)
 import(grDevices)
 import(grid)
 import(methods)
