decimal alignment function and tests.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(all_footers)
 export(all_titles)
 export(basic_matrix_form)
 export(basic_pagdf)
+export(decimal_align)
 export(default_hsep)
 export(divider_height)
 export(font_lcpi)
