--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,8 +2,19 @@ url: https://insightsengineering.github.io/formatters
 template:
   package: nesttemplate
 navbar:
-  right:
-    - icon: fa-github
+  structure:
+    left: [intro, reference, articles, tutorials, news, reports]
+    right: [search, github]
+  components:
+    reports:
+      text: Reports
+      menu:
+      - text: Coverage report
+        href: coverage-report/
+      - text: Unit test report
+        href: unit-test-report/
+    github:
+      icon: fa-github
       href: https://github.com/insightsengineering/formatters
 reference:
   - title: Formatting Values
