paginate passing tests. a few doc issues outstanding

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
           - huxtable
           - r2rtf
           - vctrs
+          - checkmate
     # codemeta must be above use-tidy-description when both are used
     # -   id: codemeta-description-updated
     -   id: use-tidy-description
