--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,12 @@ export("%||%")
 export("main_footer<-")
 export("main_title<-")
 export("mf_aligns<-")
+export("mf_cinfo<-")
+export("mf_colgap<-")
 export("mf_display<-")
 export("mf_formats<-")
 export("mf_lgrouping<-")
+export("mf_ncol<-")
 export("mf_nrheader<-")
 export("mf_rfnotes<-")
 export("mf_rinfo<-")
@@ -28,6 +31,7 @@ export(basic_matrix_form)
 export(basic_pagdf)
 export(default_hsep)
 export(divider_height)
+export(do_forced_pag)
 export(font_lcpi)
 export(format_value)
 export(is.wholenumber)
@@ -39,10 +43,13 @@ export(make_row_df)
 export(matrix_form)
 export(matrix_print_form)
 export(mf_aligns)
+export(mf_cinfo)
+export(mf_colgap)
 export(mf_display)
 export(mf_formats)
 export(mf_has_topleft)
 export(mf_lgrouping)
+export(mf_ncol)
 export(mf_nlheader)
 export(mf_nrheader)
 export(mf_rfnotes)
@@ -65,6 +72,7 @@ export(page_titles)
 export(page_types)
 export(propose_column_widths)
 export(prov_footer)
+export(ref_df_row)
 export(round_fmt)
 export(spans_to_viscell)
 export(spread_integer)
@@ -90,6 +98,7 @@ exportMethods("prov_footer<-")
 exportMethods("subtitles<-")
 exportMethods("table_inset<-")
 exportMethods(divider_height)
+exportMethods(do_forced_pag)
 exportMethods(main_footer)
 exportMethods(main_title)
 exportMethods(matrix_form)
