export_as_txt, some pagination refactor. clean check incl docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,8 @@ export(basic_matrix_form)
 export(basic_pagdf)
 export(default_hsep)
 export(divider_height)
-export(do_forced_pag)
+export(do_forced_paginate)
+export(export_as_txt)
 export(font_lcpi)
 export(format_value)
 export(is.wholenumber)
@@ -47,6 +48,7 @@ export(mf_cinfo)
 export(mf_colgap)
 export(mf_display)
 export(mf_formats)
+export(mf_has_rlabels)
 export(mf_has_topleft)
 export(mf_lgrouping)
 export(mf_ncol)
@@ -59,6 +61,7 @@ export(mf_strings)
 export(mpf_has_rlabels)
 export(mpf_to_rtf)
 export(nlines)
+export(num_rep_cols)
 export(obj_format)
 export(obj_label)
 export(obj_na_str)
@@ -70,6 +73,8 @@ export(page_dim)
 export(page_lcpp)
 export(page_titles)
 export(page_types)
+export(paginate_indices)
+export(paginate_to_mpfs)
 export(propose_column_widths)
 export(prov_footer)
 export(ref_df_row)
@@ -98,11 +103,12 @@ exportMethods("prov_footer<-")
 exportMethods("subtitles<-")
 exportMethods("table_inset<-")
 exportMethods(divider_height)
-exportMethods(do_forced_pag)
+exportMethods(do_forced_paginate)
 exportMethods(main_footer)
 exportMethods(main_title)
 exportMethods(matrix_form)
 exportMethods(nlines)
+exportMethods(num_rep_cols)
 exportMethods(obj_format)
 exportMethods(obj_label)
 exportMethods(obj_na_str)
