add testing for the new pagination functionality. clean check.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ exportMethods(do_forced_paginate)
 exportMethods(main_footer)
 exportMethods(main_title)
 exportMethods(matrix_form)
+exportMethods(ncol)
 exportMethods(nlines)
 exportMethods(num_rep_cols)
 exportMethods(obj_format)
