Fixes for clean check in both formatters and rtables.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(basic_pagdf)
 export(default_hsep)
 export(divider_height)
 export(do_forced_paginate)
+export(export_as_rtf)
 export(export_as_txt)
 export(font_lcpi)
 export(format_value)
@@ -54,6 +55,7 @@ export(mf_lgrouping)
 export(mf_ncol)
 export(mf_nlheader)
 export(mf_nrheader)
+export(mf_nrow)
 export(mf_rfnotes)
 export(mf_rinfo)
 export(mf_spans)
