add diagnose_pagination. more massaging of verbose messages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(all_titles)
 export(basic_matrix_form)
 export(basic_pagdf)
 export(default_hsep)
+export(diagnose_pagination)
 export(divider_height)
 export(do_forced_paginate)
 export(export_as_rtf)
@@ -127,6 +128,7 @@ import(methods)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(stats,na.omit)
+importFrom(utils,capture.output)
 importFrom(utils,head)
 importFrom(utils,localeToCharset)
 importFrom(utils,tail)
