--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(divider_height)
 export(do_forced_paginate)
 export(export_as_rtf)
 export(export_as_txt)
+export(fmt_config)
 export(font_lcpi)
 export(format_value)
 export(is.wholenumber)
