--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(all_footers)
 export(all_titles)
 export(basic_matrix_form)
 export(basic_pagdf)
+export(decimal_align)
 export(default_hsep)
 export(diagnose_pagination)
 export(divider_height)
@@ -39,6 +40,7 @@ export(font_lcpi)
 export(format_value)
 export(is.wholenumber)
 export(is_valid_format)
+export(list_valid_aligns)
 export(list_valid_format_labels)
 export(main_footer)
 export(main_title)
