fix for colwidths

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(all_footers)
 export(all_titles)
 export(basic_matrix_form)
 export(basic_pagdf)
+export(check_aligns)
 export(decimal_align)
 export(default_hsep)
 export(diagnose_pagination)
