--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export("mf_rfnotes<-")
 export("mf_rinfo<-")
 export("mf_spans<-")
 export("mf_strings<-")
+export("obj_align<-")
 export("obj_format<-")
 export("obj_label<-")
 export("obj_na_str<-")
@@ -66,6 +67,7 @@ export(mpf_has_rlabels)
 export(mpf_to_rtf)
 export(nlines)
 export(num_rep_cols)
+export(obj_align)
 export(obj_format)
 export(obj_label)
 export(obj_na_str)
@@ -99,6 +101,7 @@ export(wrap_txt)
 exportClasses(MatrixPrintForm)
 exportMethods("main_footer<-")
 exportMethods("main_title<-")
+exportMethods("obj_align<-")
 exportMethods("obj_format<-")
 exportMethods("obj_label<-")
 exportMethods("obj_na_str<-")
@@ -114,6 +117,7 @@ exportMethods(matrix_form)
 exportMethods(ncol)
 exportMethods(nlines)
 exportMethods(num_rep_cols)
+exportMethods(obj_align)
 exportMethods(obj_format)
 exportMethods(obj_label)
 exportMethods(obj_na_str)
