--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,22 +18,22 @@ Description: We provide a framework for rendering complex tables to ASCII,
 License: Apache License 2.0
 URL: https://github.com/insightsengineering/formatters
 BugReports: https://github.com/insightsengineering/formatters/issues
-Depends: 
+Depends:
     methods,
     R (>= 2.10)
-Imports: 
-    checkmate,
+Imports:
+    checkmate (>= 2.1.0),
     grid,
     htmltools
 Suggests:
     dplyr,
     gt (>= 0.7.0),
     huxtable,
-    knitr,
-    r2rtf,
-    rmarkdown,
-    testthat
-VignetteBuilder: 
+    knitr (>= 1.34),
+    r2rtf (>= 0.3.2),
+    rmarkdown (>= 1.11),
+    testthat (>= 3.0.4)
+VignetteBuilder:
     knitr
 Config/Needs/website: insightsengineering/nesttemplate
 Encoding: UTF-8
@@ -41,7 +41,7 @@ Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Collate: 
+Collate:
     'data.R'
     'format_value.R'
     'matrix_form.R'
